Fix unterminated block comment